--- a/Demo-Painite-master/test-output/emailable-report.html
+++ b/Demo-Painite-master/test-output/emailable-report.html
@@ -8,13 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">90,804</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,255</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mohs10.Report.PDFReportTest</td><td><a href="#m0">PDFreports</a></td><td rowspan="1">1675236170149</td><td rowspan="1">22924</td></tr><tr class="passedodd"><td rowspan="1">com.mohs10.scripts.AppTest</td><td><a href="#m1">kickStart</a></td><td rowspan="1">1675236154488</td><td rowspan="1">12914</td></tr><tr class="passedeven"><td rowspan="1">com.mohs10.scripts.HomeTest</td><td><a href="#m2">LoginTestCase</a></td><td rowspan="1">1675236107658</td><td rowspan="1">42414</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mohs10.database_testing.User_info</td><td><a href="#m0">testDB</a></td><td rowspan="1">1677240937045</td><td rowspan="1">2183</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.mohs10.Report.PDFReportTest#PDFreports</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.mohs10.scripts.AppTest#kickStart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.mohs10.scripts.HomeTest#LoginTestCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.mohs10.database_testing.User_info#testDB</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
