--- a/Demo-Painite-master/test-output/old/Default suite/classes.html
+++ b/Demo-Painite-master/test-output/old/Default suite/classes.html
@@ -4,37 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.mohs10.scripts.HomeTest</td>
+<td>com.mohs10.database_testing.User_info</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginTestCase</td>
+<td>testDB</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeClass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>methodName</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterClass</td>
-<td>&nbsp;</td></tr>
 </table>
